--- a/frontend/src/app/components/upload_files/upload.css
+++ b/frontend/src/app/components/upload_files/upload.css
@@ -1,15 +1,15 @@
-#form-file-upload {
+.form-file-upload {
   height: 64px;
   width: 732px;
   position: relative;
   padding: '9px 0 9px 0',
 }
 
-#input-file-upload {
+.input-file-upload {
   display: none;
 }
 
-#label-file-upload {
+.label-file-upload {
   height: 100%;
   width: 100%;
   display: flex;
