--- a/frontend/src/app/components/upload_files/upload.css
+++ b/frontend/src/app/components/upload_files/upload.css
@@ -21,7 +21,7 @@
   background-color: #ffffff;
 }
 
-#label-file-upload.drag-active {
+.label-file-upload.drag-active {
   background-color: #f8fafc;
 }
 
