--- a/frontend/src/app/components/my-teacher-lesson/style.scss
+++ b/frontend/src/app/components/my-teacher-lesson/style.scss
@@ -1,3 +1,39 @@
+
+.box_wrapper:after {
+  content: '';
+  position: absolute;
+  left: -1px;
+  width: 36px;
+  height: 25px;
+  border-radius: 25px 25px 0 0;
+  bottom: 31%;
+  background-color: yellow;
+}
+
+.box_wrapper:after {
+  content: '';
+  position: absolute;
+  left: -2%;
+  width: 38px;
+  height: 10px;
+  bottom: -18%;
+  background-color: yellow;
+  //z-index: 1;
+  border-radius: 12px 12px 0 0;
+  /* box-shadow: inset rgb(0 0 0 / 10%) 0px 7px 0px 0px, rgb(0 0 0 / 4%) -1px 1px 10px -5px; */
+  /* background: radial-gradient(circle at 450px 150px, transparent 49px, #fff 50px); */
+}
+
+
+
+
+
+
+
+
+
+
+
 .top_element {
   width: 36px;
   height: 36px;
@@ -14,17 +50,6 @@
   );
 }
 
-.top_element:after {
-  content: '';
-  position: absolute;
-  left: -1px;
-  width: 36px;
-  height: 25px;
-  border-radius: 25px 25px 0 0;
-  bottom: 31%;
-  background-color: #ffffff;
-}
-
 .bottom_element {
   width: 36px;
   height: 36px;
@@ -39,18 +64,4 @@
     transparent 49px,
     #fff 50px
   );
-}
-
-.bottom_element:after {
-  content: '';
-  position: absolute;
-  left: -2%;
-  width: 38px;
-  height: 10px;
-  bottom: -18%;
-  background-color: #fff;
-  z-index: 1;
-  border-radius: 12px 12px 0 0;
-  /* box-shadow: inset rgb(0 0 0 / 10%) 0px 7px 0px 0px, rgb(0 0 0 / 4%) -1px 1px 10px -5px; */
-  /* background: radial-gradient(circle at 450px 150px, transparent 49px, #fff 50px); */
 }
