--- a/frontend/src/app/theme/style.scss
+++ b/frontend/src/app/theme/style.scss
@@ -71,3 +71,15 @@ body {
   border-bottom: 1px solid #E0E0E0;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
