--- a/frontend/src/app/components/profile/index.scoped.scss
+++ b/frontend/src/app/components/profile/index.scoped.scss
@@ -7,6 +7,14 @@
   margin-right: 20px;
 }
 
+.MuiPaper-root {
+  border: 0;
+}
+
+.MuiButtonBase-root .MuiSvgIcon-root {
+  margin-right: 0px;
+}
+
 .MuiButtonBase-root:hover {
   background: #0d6efd;
   color: white;
@@ -54,6 +62,7 @@
   margin-left: 20px;
   width: 78px;
   height: 18px;
+  margin-left: calc(50% - 68px);
 }
 
 .backgroung_img {
